[project]
name = "tams-backend-local"
version = "0.0.0"
description = "Local dev environment for testing backend Python snippets. Not packaged or deployed."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "aws-lambda-powertools>=3.26.0",
    "mediatimestamp>=5.2.0",
    "m3u8>=6.0.0",
    "requests>=2.33.0",
    "crhelper>=2.0.12",
]
